--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,7 @@ dependencies:
   flutter_phone_direct_caller: ^2.0.0
   comment_box: ^0.0.16
   intl: ^0.17.0
+  location: ^4.3.0
 
 dev_dependencies:
   flutter_test:
